--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "krabby-patty",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "main": "./utils/index.js",
     "description": "A web framework's framework for Node.js",
     "scripts": {
@@ -27,9 +27,10 @@
         "tslint": "^5.0.0",
         "typescript": "^3.0.0"
     },
+    "homepage": "https://github.com/CherryBoomBoom/krabby-patty",
     "repository": {
         "type": "git",
-        "url": "https://github.com/eggjs/egg.git"
+        "url": "https://github.com/CherryBoomBoom/krabby-patty.git"
     },
     "keywords": [
         "framework",
