--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "declaration": true,
     "sourceMap": true,
     "outDir": "./utils",
-    "rootDir": "./src",
     "removeComments": true,
     "strict": false,
     "esModuleInterop": true,
@@ -15,5 +14,8 @@
   },
   "exclude": [
     "src/demo/node_modules"
+  ],
+  "include": [
+    "src/**/*"
   ]
 }
