--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "pretty": true
   },
   "exclude": [
-    "src/demo/node_modules"
+    "src/demo/node_modules/*"
   ],
   "include": [
     "src/**/*"
