--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "sourceMap": true,
     "outDir": "./utils",
+    "baseUrl": ".",
     "removeComments": true,
     "strict": false,
     "esModuleInterop": true,
@@ -12,10 +13,10 @@
     "emitDecoratorMetadata": true,
     "pretty": true
   },
-  "exclude": [
-    "src/demo/node_modules/*"
-  ],
   "include": [
-    "src/**/*"
+    "./src/**/*"
+  ],
+  "exclude": [
+    "./src/demo/node_modules/*"
   ]
 }
