--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - npm install
 script:
   - cd ./src/demo && npm install && cd ../../
-  - npm run build
+  - ls && npm run build
   - cd ./src && rm -r !(init.js | demo) && cd ../
-  - npm publish
+  - npm login 'cherryboom'
+  - ls && npm publish
