--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ script:
   - cd ./src/demo && npm install && cd ../../
   - npm run build
   - cd ./src && rm -r !(init.js | demo) && cd ../
-  - npm login << EOF
-  - ss ss ss
+  - npm login
+  - echo 'ss'
+  - echo 'ss'
+  - echo 'ss'
