--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,4 @@ script:
   - cd ./src/demo && npm install && cd ../../
   - npm run build
   - cd ./src && rm -r !(init.js | demo) && cd ../
-  - npm login << EOF
-   ss 
-   ss 
-   ss 
-   EOF
+  - npm login 
