--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "krabby-patty",
-    "version": "1.2.3",
+    "version": "1.2.4",
     "main": "./utils/index.js",
     "description": "A web framework's framework for Node.js",
     "scripts": {
         "start": "node utils/app.js",
-        "dev": "ts-node src/app.ts",
-        "test": "ts-node src/test/app.ts",
+        "dev": "ts-node src/app.ts --dev",
+        "test": "ts-node src/test/app.ts  --dev",
         "build": "tsc"
     },
     "bin": {
