--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "crypto": "^1.0.1",
         "express": "4.17.1",
         "globby": "^10.0.1",
-        "mongoose": "5.7.5"
+        "mongoose": "5.7.5",
+        "connect-multiparty":"2.2.0"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.40",
